# wasmui

./: Cargo.toml  README.md  host_config.json  manifest.yaml  wasmcloud.toml
.github/workflows/: build.yml  release.yml
src/: build.rs  lib.rs
ui/: package-lock.json
ui/public/: index.html
