[package]
name = "wasmui"
version = "0.1.0"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
rust-embed = "6.3.0"

wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.9.0"
wasmcloud-interface-logging = { version = "0.8.0", features = ["sync_macro"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
